@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro-stat.8.in,v 1.5 2006-11-08 00:34:03 chu11 Exp $
+\."$Id: cerebro-stat.8.in,v 1.6 2006-11-09 17:36:50 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2005 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -25,17 +25,17 @@
 \."#############################################################################
 .TH cerebro-stat 8 "July 2005" "cerebro-stat @VERSION@" cerebro-stat
 .SH "NAME"
-cerebro-stat \- cerebro metric data gathering
+cerebro-stat \- cerebro data gathering
 .SH "SYNOPSIS"
 .B cerebro-stat [OPTIONS]
 .br
 .SH "DESCRIPTION"
 The
 .B cerebro-stat
-tool retrieves the currently available metric names and metric data from 
-a 
+tool retrieves the currently available metric names, metric data, and
+event data from a
 .B cerebrod(8)
-metric server.  
+daemon.
 
 The default hostname and port used by 
 .B cerebro-stat
@@ -60,10 +60,10 @@ Output help
 Output version
 .TP
 .B \-o \fISTRING\fR, \fB\-\-hostname\fR=\fISTRING\fR
-Cerebrod metric server hostname (default=localhost)
+Cerebrod server hostname (default=localhost)
 .TP
 .B \-p \fIINT\fR, \fB\-\-port\fR=\fIINT\fR
-Cerebrod metric server port (default=8649)
+Cerebrod server port (default=8649)
 .TP
 .B -l, --metric-list
 List all available metrics that can be queried
