@@ -140,8 +140,8 @@ _usage(void)
 	  "Usage: cerebro_stat [OPTIONS]...\n"
 	  "  -h         Print help and exit\n"
 	  "  -v         Print version and exit\n"
-	  "  -o STRING  Cerebro metric server hostname\n"
-	  "  -p INT     Cerebro metric server port\n"
+	  "  -o STRING  Cerebro server hostname\n"
+	  "  -p INT     Cerebro server port\n"
           "  -l         List all available metrics that can be queried\n"
           "  -m STRING  Output metric data for the specified metric\n"
           "  -U         Only output metrics from up nodes\n"
